--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-streamlit==1.30.0
-pandas==2.0.0
-openpyxl==3.1.2
-xlrd==2.0.1
+streamlit
+pandas
+openpyxl
+xlrd
 selenium==4.20.0
 webdriver-manager==4.0.1
-requests==2.31.0
+requests
